--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,20 @@
 {
-  "dependencies": {
-    "connect-mongodb-session": "^3.1.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^7.2.3",
-    "passport": "^0.6.0"
-  }
+	"scripts": {
+		"serve": "nodemon ."
+	},
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"connect-mongodb-session": "^3.1.1",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.1.4",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"mongoose": "^7.2.2",
+		"passport": "^0.6.0",
+		"passport-github2": "^0.1.12",
+		"passport-google-oauth2": "^0.2.0",
+		"passport-http": "^0.3.0",
+		"passport-local": "^1.0.0",
+		"pbkdf2": "^3.1.2"
+	}
 }
