--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"body-parser": "^1.20.2",
 		"connect-mongodb-session": "^3.1.1",
+		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"dotenv": "^16.1.4",
 		"express": "^4.18.2",
