--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "options": {
-    "allowedHosts": ["localhost"],
+    "allowedHosts": [
+      "localhost"
+    ],
     "proxy": "https://localhost:9000"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
